# python-challenge

./: .gitignore  .mypy.ini  LICENSE  Makefile  README.md  pyproject.toml  test.rest.http
dev/: devserver.py
lib/data/: __init__.py  database.py
lib/model/: __init__.py  mixins.py
notify/: basedata.py  conftest.py  main.py
notify/data/: notifications.py
notify/handler/: notify.py
notify/model/: __init__.py  notification.py
notify/routes/: notify.py
notify/test/: test_notify.py
user/model/: user.py
